# bmotif-docker-release

./: API.md  README.md  build-images.sh  database-schema.md  docker-compose.yml  equip-embeddings.parquet  pyproject.toml
app/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
app/src/: custom-theme.scss  index.html  main.ts  styles.css
app/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  demostate.service.ts
app/src/app/home/: home.component.css  home.component.html  home.component.ts
app/src/app/library-detail/: library-detail.component.css  library-detail.component.html  library-detail.component.ts
app/src/app/library-new/: library-create.service.ts  library-new.component.css  library-new.component.html  library-new.component.ts
app/src/app/mapping/: mapping.model.ts  (+4 more)
asbuilt-lib/: ahu.yml  vav.yml
demo-files/: GL36_VAV.json  finished_mapping.csv  parser.py  point_dump_vav.csv  vav_point_schedule.csv
interop_metadata_applications/: OSIsoft.AF.xsd  a.py  afxml.py  bmotif_o27.py  piapi.py  transform.py  ttl_to_af.py  utils.py
interop_metadata_applications/api/: Dockerfile  __init__.py
interop_metadata_applications/api/serializers/: parser.py
interop_metadata_applications/api/views/: home.py  manifest_generation.py  mappings.py  model_generation.py  naming.py  parser.py  pointlist_to_template.py  transform.py
interop_metadata_applications/demo/: parse_pi_tags.py
interop_metadata_applications/pointlistdemo/: __init__.py
(+58 files in other folders)
